# selective-amnesia

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: b0_no_memory.yaml  b1_flat_memory.yaml  b3_graph_no_forgetting.yaml  b4_graph_with_forgetting.yaml
data/: memory_graph.json
scripts/: run_benchmark.py  run_experiments.py
src/: __init__.py  main.py  memory_store.json
src/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py
src/evaluation/: data_loaders.py  metrics.py  published_baselines.py  runner.py
src/experiments/: baselines.py  config.py  data_loaders.py  graph_builder.py  graph_retriever.py  latex_output.py  metrics.py  run_all.py  run_locomo.py  run_longmemeval.py
src/memory/: __init__.py  forgetting.py  graph_store.py  retriever.py  schemas.py
src/ui/: app.py
tests/: test_evaluation.py  test_memory.py
